--- a/styles.css
+++ b/styles.css
@@ -301,11 +301,11 @@ svg {
 }
 
 .p-name, .p-input, .p-delete {
-    height: 100%; 
+    height: 100%;
     box-sizing: border-box;
-    display: flex; 
-    align-items: center; 
-    justify-content: center; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: 3px rgba(255, 255, 255, 0.5) solid;
     border-radius: 15px;
 }
@@ -476,5 +476,18 @@ footer:hover {
         font-size: 14px;
         display: flex; align-items: center; justify-content: center;
         padding-top: 20px;
+    }
+}
+
+@media (max-width: 405px) {
+    .p-name {
+        flex: 1 1 auto; 
+        min-width: 0;
+    }
+
+    .controls > button {
+        height: 40px;
+        padding: 0 5px;
+        padding-top: 10px; /* Bad way to fix the vertical alignment but its ok */
     }
 }
