--- a/styles.css
+++ b/styles.css
@@ -477,6 +477,11 @@ footer:hover {
         display: flex; align-items: center; justify-content: center;
         padding-top: 20px;
     }
+
+    @keyframes deletePinch {
+        0% {height: 40px; margin-bottom: 1rem;}
+        100% {height: 0px; margin-bottom: 0rem;}
+    }
 }
 
 @media (max-width: 405px) {
